feat: enhance user feedback and validation in forms
- Integrated NotificationService across multiple components (Attendance, Group, Groups, Student, Students, User, Users) for consistent user feedback on actions such as creation, update, and deletion.
- Implemented phone number validation in Student and Students components, providing real-time feedback for invalid inputs.
- Updated translation files to include success and error messages for various actions, improving user experience in both English and Spanish.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -170,7 +170,22 @@
     "PREVIOUS": "Previous",
     "NEXT": "Next",
     "ACTIONS": "Actions",
-    "INVALID_PHONE": "Please enter a valid phone number (digits, spaces, +, -, ())."
+    "INVALID_PHONE": "Please enter a valid phone number (digits, spaces, +, -, ()).",
+    "USER_CREATED_SUCCESS": "User created successfully!",
+    "ERROR_CREATING_USER": "Error creating user. Please try again.",
+    "GROUP_CREATED_SUCCESS": "Group created successfully!",
+    "ERROR_CREATING_GROUP": "Error creating group. Please try again.",
+    "STUDENT_CREATED_SUCCESS": "Student created successfully!",
+    "ERROR_CREATING_STUDENT": "Error creating student. Please try again.",
+    "ATTENDANCE_CREATED_SUCCESS": "Attendance created successfully!",
+    "ATTENDANCE_UPDATED_SUCCESS": "Attendance updated successfully!",
+    "ATTENDANCE_DELETED_SUCCESS": "Attendance deleted successfully!",
+    "ERROR_DELETING_ATTENDANCE": "Error deleting attendance. Please try again.",
+    "RECEIPT_ALREADY_GENERATED": "Receipt already generated for this attendance.",
+    "RECEIPT_GENERATED_SUCCESS": "Receipt generated successfully!",
+    "ERROR_ALL_FIELDS_REQUIRED": "All fields are required",
+    "ERROR_CREATING_ATTENDANCE": "Error creating attendance. Please try again.",
+    "ERROR_UPDATING_ATTENDANCE": "Error updating attendance. Please try again."
   },
   "ATTENDANCE": {
     "TITLE": "Attendance",
