feat: implement user management dropdown in navbar
- Added a dropdown menu for user management in both desktop and mobile views, enhancing navigation for user-related actions.
- Integrated toggle functionality for the dropdown, allowing users to expand and collapse the menu.
- Updated styles for dropdown elements to ensure a consistent and visually appealing design.
- Included translations for the new user management label in English and Spanish.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "NAVBAR": {
     "DASHBOARD": "Dashboard",
+    "USER_MANAGEMENT": "User Management",
     "STUDENTS": "Students",
     "GROUPS": "Groups",
     "USERS": "Users",
