--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,6 +1,7 @@
 {
   "NAVBAR": {
     "DASHBOARD": "Panel",
+    "USER_MANAGEMENT": "Gestión de Usuarios",
     "STUDENTS": "Estudiantes",
     "GROUPS": "Grupos",
     "USERS": "Usuarios",
